# hasher

./: Cargo.toml  LICENSE  README.md
src/: hashing.rs  lib.rs  main.rs
