[package]
name = "hasher"
authors = ["Elias Nau <eliasnau09@gmail.com>"]
description = "A simple Tool for hashing"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.10.8"
digest = "0.10.7"
clap = { version = "4.5.4", features = ["derive"] }

[build-dependencies]
clap = "4.5.4"
clap_derive = "4.5.4"